# bouldering-analysis

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  TODO.md  claude_plan_prompt.txt  environment.yml  mypy.ini  pyproject.toml  pytest-coverage.txt  render.yaml  requirements.txt  run.sh  run_qa.csh  run_qa.sh  run_setup_dev.sh  setup_dev.py  setup_uv.ps1  setup_uv.sh  test_supabase_connection.py
.claude/: settings.local.json
.github/workflows/: pylint.yml  python-code-cov.yml  python-package-conda.yml  (+1 more)
docs/: DESIGN.md  FASTAPI_ROLE.md  FRONTEND_WORKFLOW.md  MODEL_PRETRAIN.md  PRE_COMMIT_HOOKS.md  RENDER_SETUP.md  SUPABASE_SETUP.md  TELEGRAM_BOT.md  VERCEL_SETUP.md  YOLO_TRAINING_GUIDE.md  migrations.md  week3-4_implementation.md  week3-4_validation.md
plans/: FEASIBILITY_ASSESSMENT.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_PLAN.md  MVP_STATUS_TRACKER.md  PR-2.1-ERROR-ANALYSIS.md  README.md  grade_prediction_algorithm.md  overview.md  persona_personalization_analysis.md  phase1_route_based_prediction.md  phase2_video_analysis_validation.md
scripts/: __init__.py  ping_supabase.py  train_classification_model.py  train_detection_model.py  verify_classification_model.py  verify_detection_model.py
src/: __init__.py  app.py  config.py  constants.py  grade_prediction_mvp.py  logging_config.py  main.py  manage_models.py  models.py  setup.py  setup_dev.py  train_model.py
tests/: __init__.py  conftest.py  test_app.py  test_classification_dataset.py  test_classification_model.py  test_config.py  test_detection_model.py  test_e2e_grade_prediction.py  test_explanation_engine.py  test_features_assembler.py  test_features_geometry.py  test_features_holds.py  test_grade_prediction_mvp.py  test_grading_constants.py  test_grading_exceptions.py  test_grading_heuristic.py  test_grading_ml.py  test_grading_utils.py  test_graph_constraints.py  test_graph_exceptions.py  test_graph_route_graph.py  test_graph_types.py  test_health.py  test_inference_classification.py  test_inference_crop_extractor.py  test_inference_detection.py  test_inference_pipeline.py  test_logging_config.py  test_main.py  test_manage_models.py  test_migration_utils.py  test_migrations_features.py  test_migrations_feedback.py  test_migrations_holds.py  test_migrations_predictions.py  test_migrations_routes.py  test_migrations_routes_extension.py  test_models.py  test_routes.py  test_routes_analysis.py  (+10 more)
(+112 files in other folders)
