[project]
name = "bouldering-analysis"
version = "0.1.0"
description = "Computer vision-based bouldering route difficulty estimation system"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Bouldering Analysis Team" }
]
keywords = ["bouldering", "climbing", "computer-vision", "grade-estimation", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web Framework
    "fastapi==0.128.6",
    "uvicorn[standard]==0.40.0",
    "pydantic-settings==2.7.1",
    # Async Support
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    # Structured Logging
    "python-json-logger==3.2.1",
    # Image Processing
    "Pillow==12.1.1",
    "opencv-python==4.12.0.88",
    # Machine Learning
    "torch==2.9.1",
    "torchvision==0.24.1",
    "ultralytics==8.3.233",
    # Data Processing
    "numpy==2.2.6",
    "PyYAML==6.0.2",
    # Database (Supabase)
    "supabase==2.27.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.2",
    # Development Tools
    "requests==2.32.5",
    "pylint==4.0.3",
    "ruff==0.14.7",
    "mypy==1.18.2",
    "types-PyYAML==6.0.12.20250516",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["archive", "legacy", ".git", "__pycache__", "venv"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'if API_URL:',
    'if api_key:',
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
    "src/setup.py",
    "src/archive/*",
]
